--- a/views/ranking_list.jade
+++ b/views/ranking_list.jade
@@ -21,14 +21,9 @@ html
         var username;
         var steps;
         var amount_dividing;
-        var challenge;
-        var list=[{username:"zzz",steps:12000,icon:"/img/head (9).jpg"},
-            {username:"aaa",steps:10500,icon:"/img/head (1).jpg"},
-            {username:"bbb",steps:9020,icon:"/img/head (7).jpg"},
-            {username:"ddd",steps:7500,icon:"/img/head (3).jpg"},
-            {username:"eee",steps:5000,icon:"/img/head (4).jpg"}];
+        var challenge;       
         window.onload = function(){
-            for(var i = 0; i < list.length; i++) {
+            for(var i = 0; i < (#{list.length}); i++) {
             single_list = document.createElement("div");
             number = document.createElement("div");
             head = document.createElement("img");
@@ -41,14 +36,14 @@ html
             number.setAttribute("class","number");
             number.innerText = i + 1;
             head.setAttribute("class","head");
-            head.src = list[i].icon;
+            
             info.setAttribute("class","info");
             username.setAttribute("class","username");
-            username.innerText = list[i].username;
+            username.innerText = (#{list[i].username});
             steps.setAttribute("class","steps");
-            steps.innerText = list[i].steps;
+            steps.innerText = (#{list[i].steps});
             amount_dividing.setAttribute("class","amount_dividing");
-            amount_dividing.style.width = (list[i].steps / list[0].steps) * window_width * 0.5 + "px";
+            amount_dividing.style.width = ((#{list[i].steps}) / (#{list[0].steps})) * window_width * 0.5 + "px";
             challenge.setAttribute("class","challenge");
             challenge.src = "/img/1.png";
             challenge.value = i;
