--- a/views/ranking_list.jade
+++ b/views/ranking_list.jade
@@ -3,6 +3,7 @@ html
   meta(http-equiv='Content-Type', content='text/html; charset=UTF-8')
   head
     title 排行榜
+    script(src='/js/jquery.js')
     meta(name='viewport', content='width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0')
     meta(name='apple-mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-status-bar-style', content='black')
@@ -11,56 +12,29 @@ html
     meta(name='HandheldFriendly', content='true')
     link(rel='stylesheet', type='text/css', href='/css/ranking_list.css')
   body(style='margin:0px;padding:0px;font-family:微软雅黑;background-color:#eeeeee')
-    script.
-        var window_width = document.all ? document.getElementsByTagusername("html")[0].offsetHeight : window.innerWidth;
-        var single_list;
-        var number;
-        var rank_front;
-        var head;
-        var info;
-        var username;
-        var steps;
-        var amount_dividing;
-        var challenge;       
-        window.onload = function(){
-            for(var i = 0; i < (#{list.length}); i++) {
-            single_list = document.createElement("div");
-            number = document.createElement("div");
-            head = document.createElement("img");
-            info = document.createElement("div");
-            username = document.createElement("div");
-            steps = document.createElement("div");
-            amount_dividing = document.createElement("hr");
-            challenge = document.createElement("img");
-            single_list.setAttribute("class","single_list");
-            number.setAttribute("class","number");
-            number.innerText = i + 1;
-            head.setAttribute("class","head");
-            
-            info.setAttribute("class","info");
-            username.setAttribute("class","username");
-            username.innerText = (#{list[i].username});
-            steps.setAttribute("class","steps");
-            steps.innerText = (#{list[i].steps});
-            amount_dividing.setAttribute("class","amount_dividing");
-            amount_dividing.style.width = ((#{list[i].steps}) / (#{list[0].steps})) * window_width * 0.5 + "px";
-            challenge.setAttribute("class","challenge");
-            challenge.src = "/img/1.png";
-            challenge.value = i;
-            document.body.appendChild(single_list);
-            single_list.appendChild(number);
-            single_list.appendChild(head);
-            single_list.appendChild(info);
-            single_list.appendChild(challenge);
-            info.appendChild(username);
-            info.appendChild(steps);
-            info.appendChild(amount_dividing);
-            if(i < 3) {
-            	rank_front = document.createElement("img");
-            	rank_front.setAttribute("class", "rank_front");
-            	rank_front.src = "/img/number"+(i+1)+".png";
-            	number.innerText="";
-            	number.appendChild(rank_front);
+    each item, i in list
+        .single_list
+            .number #{i+1}
+            img.head(src='#{item.icon}')
+            .info
+                .username #{item.nickname}
+                .steps #{item.steps}
+                .amount_dividing(value='#{item.steps}')
+            img.challenge(src='/img/1.png', value='i')
+    #longest_dividing(value='#{list[0].steps}')
+   script.
+    var rank_front;
+    var number;
+    var window_width = document.all ? document.getElementsByTagusername("html")[0].offsetHeight : window.innerWidth;
+    $(function(){ 
+        $(".number").each(function(){
+            if(parseInt($(this).text()) <= 3){
+                rank_front = $("<img src = '/img/number"+ (parseInt($(this).text()))+".png' class = 'rank_front'/>");
+                $(this).empty();
+                rank_front.appendTo($(this));
             }
-        }};
-        
+        })
+        $(".amount_dividing").each(function(){
+            $(this).css("width", parseInt($(this).attr("value"))/parseInt($("#longest_dividing").attr("value")) * window_width * 0.5 + "px");
+        })
+    })
