--- a/views/friends.jade
+++ b/views/friends.jade
@@ -25,3 +25,4 @@ html
         input(type='text', placeholder='enter username')
         button#search-button Search
         section.user-list
+      div#special-friend    
