加入静态地图显示

--- a/views/ranking_list.jade
+++ b/views/ranking_list.jade
@@ -22,6 +22,8 @@ html
                 .amount_dividing(value='#{item.steps}')
             img.challenge(src='/img/1.png', value='i')
     #longest_dividing(value='#{list[0].steps}')
+    a(href='/map.html')
+      input(type='button')
    script.
     var rank_front;
     var number;
