--- a/views/friends.jade
+++ b/views/friends.jade
@@ -9,10 +9,11 @@ html
     link(rel='stylesheet', type='text/css', href='/css/friends.css')
     script(type='text/javascript', src='/js/jquery-1.11.1.js')
     script(type='text/javascript', src='/js/friends.js')
+    script(type='text/javascript', src='/js/Chart.js')
     script.
         window.userid = !{JSON.stringify(userid)};
   body
-    div#wrapper(style='margin-top:0.5rem; margin-left:0; margin-right: 0; overflow: hidden; min-height:640px;')
+    div#wrapper(stle='margin-top:0.5rem; margin-left:0; margin-right: 0; overflow: hidden; min-height:640px;')
       nav.header(style='position: fixed; width:100%; top:0.5rem; left:0; z-index:199; -webkit-transform: translateZ(0); -webkit-box-sizing:border-box;')
         li#tag0.selected
           a &#x5173;&#x6CE8;
@@ -20,11 +21,9 @@ html
           a &#x7279;&#x522B;&#x5173;&#x6CE8;        
         li#tag2
           a &#x641C;&#x7D22;
-        li#tag3
-          a &#x6D88;&#x606F;
       section.friend-list
       div#search
         input(type='text', placeholder='enter username')
         button#search-button Search
         section.user-list
-      div#mask
+      div#special-friend
