--- a/public/css/friends.css
+++ b/public/css/friends.css
@@ -6,6 +6,7 @@ body{
     color:#2b2b2b;
     font-size:.14rem;
     background: #EBECEF;
+    overflow-x: hidden; 
 }
 
 body{
@@ -32,8 +33,8 @@ html{
 }
 
 li{
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
     list-style: none;
 }
 
