--- a/views/friends.jade
+++ b/views/friends.jade
@@ -23,3 +23,5 @@ html
         input(type='text', placeholder='enter username')
         button#search-button Search
         section.user-list
+    img#left-arrow.arrow(src='/img/left.png')
+    img#right-arrow.arrow(src='/img/right.png')
