--- a/public/css/friends.css
+++ b/public/css/friends.css
@@ -77,6 +77,19 @@ li{
     overflow: hidden;
 }
 
+.arrow{
+    width: 50px;
+    height: 50px;
+    margin-right: 15px;
+    margin-left: 15px;
+    overflow: hidden;
+    position:absolute;
+    z-index:500;
+    opacity: 0.7;
+    display: none;
+}
+
+
 #search{
     display:none;
 }
