--- a/views/friends.jade
+++ b/views/friends.jade
@@ -7,13 +7,13 @@ html
     meta(name='apple-mobile-web-app-capable', ,='', content='yes')
     meta(content='telephone=no', name='format_detection')
     link(rel='stylesheet', type='text/css', href='/css/friends.css')
-    script(type='text/javascript', src='/js/jquery-1.11.1.js')
+    script(type='text/javascript', src='/js/jquery.js')
     script(type='text/javascript', src='/js/friends.js')
     script(type='text/javascript', src='/js/Chart.js')
     script.
         window.userid = !{JSON.stringify(userid)};
-  body(style='margin:0;padding:0')
-    div#wrapper(style='margin-top:0; margin-left:0; margin-right: 0; overflow: hidden; min-height:640px;')
+body
+    div#wrapper(style='margin-top:0rem; margin-left:0; margin-right: 0; overflow: hidden; height:100%;')
       nav.header(style='position: fixed; width:100%; top:0; left:0; z-index:199; -webkit-transform: translateZ(0); -webkit-box-sizing:border-box;')
         li#tag0.selected
           a &#x5173;&#x6CE8;
@@ -22,6 +22,7 @@ html
         li#tag2
           a &#x641C;&#x7D22;
       section.friend-list
+      section#special-friend(style='overflow:hidden;')
       div#search
         input(type='text', placeholder='enter username')
         button#search-button Search
