--- a/views/head.jade
+++ b/views/head.jade
@@ -19,7 +19,7 @@ head
 				strokeColor : "rgba(200,200,200,1)",
 				pointColor : "rgba(220,220,220,1)",
 				pointStrokeColor : "#fff",
-				data : [#{db_steps.d1},#{db_steps.d2},#{db_steps.d3},#{db_steps.d4},#{db_steps.d5},#{db_steps.d6},#{db_steps.d7}]
+				data : [#{db_steps[0].steps},#{db_steps[1].steps},#{db_steps[2].steps},#{db_steps[3].steps},#{db_steps[4].steps},#{db_steps[5].steps},#{db_steps[6].steps}]
 			}
 			]
 		};
