--- a/views/sport_statistics.jade
+++ b/views/sport_statistics.jade
@@ -9,7 +9,7 @@ body(style= "background-color:#eeeeee;overflow:hidden;margin:0px;padding:0px;fon
 			img#head_img(src= "#{db_steps.icon}")
 			div#hello Hi,#{db_steps.nickname}~
 			div#statistic 过去一周，您累计步行
-				b(style = "font-size:1.5em;color:red") 123430步
+				b(style = "font-size:1.5em;color:red") #{db_steps[7].steps}步
 				
 			
 		
